SERVER-25175 listIndexes command only includes ready indexes

(cherry picked from commit 2cc9396586e771a0484a4017bf3f126098818d2b)