src/mongo/db/catalog/collection_catalog_entry.h
@@ -64,6 +64,9 @@ public:
 
     virtual void getAllIndexes(OperationContext* opCtx, std::vector<std::string>* names) const = 0;
 
+    virtual void getReadyIndexes(OperationContext* opCtx,
+                                 std::vector<std::string>* names) const = 0;
+
     virtual BSONObj getIndexSpec(OperationContext* opCtx, StringData idxName) const = 0;
 
     /**
