src/mongo/db/commands/list_indexes.cpp
@@ -157,7 +157,7 @@ public:
             vector<string> indexNames;
             writeConflictRetry(opCtx, "listIndexes", ns.ns(), [&indexNames, &cce, &opCtx] {
                 indexNames.clear();
-                cce->getAllIndexes(opCtx, &indexNames);
+                cce->getReadyIndexes(opCtx, &indexNames);
             });
 
             auto ws = make_unique<WorkingSet>();
