src/mongo/db/storage/bson_collection_catalog_entry.h
@@ -58,6 +58,8 @@ public:
 
     virtual void getAllIndexes(OperationContext* txn, std::vector<std::string>* names) const;
 
+    virtual void getReadyIndexes(OperationContext* txn, std::vector<std::string>* names) const;
+
     virtual bool isIndexMultikey(OperationContext* txn,
                                  StringData indexName,
                                  MultikeyPaths* multikeyPaths) const;
